# haskell-wordpuzzle

./: .cabal-config  .gitignore  .gitlab-ci.yml  .stylish-haskell.yaml  CHANGELOG.md  GLOSSARY.md  Makefile  README.md  WordPuzzle.html  azure-pipelines.yml  benchmark.html  cabal.project  cabal.project.freeze  dictionary  doc-index.html  doc-index.json  filter-words.sh  index.html  stack.mak  stack.mk  stack.yaml  test_nine10.hs  test_spelling2.hs  wordpuzzle.cabal  wordpuzzle.code-workspace  wordpuzzle.haddock  wordpuzzle.txt
adjunctions-4.4.2/: Control-Comonad-Representable-Store.html  Control-Comonad-Trans-Adjoint.html  Control-Monad-Representable-Reader.html  Control-Monad-Representable-State.html  Control-Monad-Trans-Adjoint.html  Control-Monad-Trans-Contravariant-Adjoint.html  Control-Monad-Trans-Conts.html  Data-Functor-Adjunction.html  Data-Functor-Contravariant-Adjunction.html  Data-Functor-Contravariant-Rep.html  Data-Functor-Rep.html  adjunctions.haddock  doc-index.html  doc-index.json  index.html
adjunctions-4.4.3/: Control-Comonad-Representable-Store.html  Control-Comonad-Trans-Adjoint.html  Control-Monad-Representable-Reader.html  Control-Monad-Representable-State.html  Control-Monad-Trans-Adjoint.html  Control-Monad-Trans-Contravariant-Adjoint.html  Control-Monad-Trans-Conts.html  Data-Functor-Adjunction.html  Data-Functor-Contravariant-Adjunction.html  Data-Functor-Contravariant-Rep.html  Data-Functor-Rep.html  adjunctions.haddock  adjunctions.txt  doc-index.html  doc-index.json  index.html
all/: doc-index-124.html  doc-index-126.html  doc-index-33.html  doc-index-35.html  doc-index-36.html  doc-index-37.html  doc-index-38.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  doc-index-47.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-63.html  doc-index-64.html  doc-index-92.html  doc-index-94.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  (+10 more)
app/: Main.hs
bench/: Bench.hs  Main.hs
doc/: benchmark.html  deployment.md  index.html
docs/: benchmark.html  design.md  github-run-wordpuzzle.md  gitlab-run-wordpuzzle.md  index.html
hpc/: index.html
invariant-0.6.2/: Data-Functor-Invariant-TH.html  Data-Functor-Invariant.html  doc-index.html  doc-index.json  index.html  invariant.haddock  invariant.txt
invariant-0.6.4/: Data-Functor-Invariant-TH.html  Data-Functor-Invariant.html  doc-index.html  doc-index.json  index.html  invariant.haddock  invariant.txt
io-streams-1.5.1.0/: System-IO-Streams-Attoparsec-ByteString.html  System-IO-Streams-Attoparsec-Text.html  System-IO-Streams-Attoparsec.html  System-IO-Streams-Builder.html  System-IO-Streams-ByteString.html  System-IO-Streams-Combinators.html  System-IO-Streams-Concurrent.html  System-IO-Streams-Core.html  System-IO-Streams-Debug.html  System-IO-Streams-File.html  System-IO-Streams-Handle.html  System-IO-Streams-Internal.html  System-IO-Streams-List.html  System-IO-Streams-Network.html  System-IO-Streams-Process.html  System-IO-Streams-Text.html  System-IO-Streams-Tutorial.html  System-IO-Streams-Vector.html  System-IO-Streams-Zlib.html  System-IO-Streams.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  (+9 more)
io-streams-1.5.2.0/: System-IO-Streams-Attoparsec-ByteString.html  System-IO-Streams-Attoparsec-Text.html  System-IO-Streams-Attoparsec.html  System-IO-Streams-Builder.html  System-IO-Streams-ByteString.html  System-IO-Streams-Combinators.html  System-IO-Streams-Concurrent.html  System-IO-Streams-Core.html  System-IO-Streams-Debug.html  System-IO-Streams-File.html  System-IO-Streams-Handle.html  System-IO-Streams-Internal.html  System-IO-Streams-List.html  System-IO-Streams-Network.html  System-IO-Streams-Process.html  System-IO-Streams-Text.html  System-IO-Streams-Tutorial.html  System-IO-Streams-Vector.html  System-IO-Streams-Zlib.html  System-IO-Streams.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  (+9 more)
io-streams-1.5.2.1/: System-IO-Streams-Attoparsec-ByteString.html  System-IO-Streams-Attoparsec-Text.html  System-IO-Streams-Attoparsec.html  System-IO-Streams-Builder.html  System-IO-Streams-ByteString.html  System-IO-Streams-Combinators.html  System-IO-Streams-Concurrent.html  System-IO-Streams-Core.html  System-IO-Streams-Debug.html  System-IO-Streams-File.html  System-IO-Streams-Handle.html  System-IO-Streams-Internal.html  System-IO-Streams-List.html  System-IO-Streams-Network.html  System-IO-Streams-Process.html  System-IO-Streams-Text.html  System-IO-Streams-Tutorial.html  System-IO-Streams-Vector.html  System-IO-Streams-Zlib.html  System-IO-Streams.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  (+9 more)
io-streams-1.5.2.2/: System-IO-Streams-Attoparsec-ByteString.html  System-IO-Streams-Attoparsec-Text.html  System-IO-Streams-Attoparsec.html  System-IO-Streams-Builder.html  (+45 more)
(+744 files in other folders)
