cabal-version:      3.0
name:               wordpuzzle
version:            1.0.1
synopsis:           9 letter word puzzle solver
tested-with:        GHC ==9.4.8 || ==9.6.7
description:
  Solve a common 9 letter word puzzle. This will list all words matching the 9
  letters and must include a mandatory character.

homepage:
  https://github.com/frankhjung/haskell-wordpuzzle/blob/master/README.md

author:             Frank H Jung
maintainer:         frankhjung@linux.com
copyright:          Copyright © 2017-2025 Frank H Jung
license:            BSD-3-Clause
license-file:       LICENSE
category:           education
extra-source-files: README.md

common shared-properties
  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat -Widentities

source-repository head
  type:     git
  location: https://github.com/frankhjung/haskell-wordpuzzle

executable wordpuzzle
  default-language: Haskell2010
  hs-source-dirs:   app src
  main-is:          Main.hs
  ghc-options:      -threaded
  autogen-modules:  Paths_wordpuzzle
  other-modules:
    Paths_wordpuzzle
    WordPuzzle

  build-depends:
    , base                  ^>=4.18.3
    , optparse-applicative  ^>=0.18
    , validation            ^>=1.1

library
  default-language:   Haskell2010
  default-extensions:
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards

  hs-source-dirs:     src
  exposed-modules:    WordPuzzle
  build-depends:
    , base        ^>=4.18.3
    , bytestring  ^>=0.11
    , io-streams  ^>=1.5
    , validation  ^>=1.1

test-suite test
  default-language: Haskell2010
  hs-source-dirs:   test src
  main-is:          TestSpec.hs
  type:             exitcode-stdio-1.0
  other-modules:    WordPuzzle
  build-depends:
    , base        ^>=4.18.3
    , bytestring
    , hspec       ^>=2.11
    , validation  ^>=1.1

benchmark benchmark
  default-language: Haskell2010
  hs-source-dirs:   bench src
  main-is:          Bench.hs
  type:             exitcode-stdio-1.0
  other-modules:    WordPuzzle
  build-depends:
    , base        ^>=4.18.3
    , criterion   ^>=1.6
    , validation  ^>=1.1
