cabal-version:      3.0
name:               wordpuzzle
version:            1.1.1
synopsis:           word puzzle solver
tested-with:        GHC ==9.4.8 || ==9.6.7
description:
  Solve common word puzzles. This will list all words matching the given letters
  and must include a mandatory character.

homepage:
  https://github.com/frankhjung/haskell-wordpuzzle/blob/master/README.md

author:             Frank H Jung
maintainer:         frankhjung@linux.com
copyright:          Copyright © 2017-2026 Frank H Jung
license:            BSD-3-Clause
license-file:       LICENSE
category:           education
extra-source-files: README.md

common shared-properties
  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat -Widentities

source-repository head
  type:     git
  location: https://github.com/frankhjung/haskell-wordpuzzle

library
  import:             shared-properties
  hs-source-dirs:     src
  exposed-modules:    WordPuzzle
  default-extensions:
    BangPatterns
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards

  build-depends:
    , base        ^>=4.18.3
    , bytestring  ^>=0.11
    , io-streams  ^>=1.5
    , validation  ^>=1.1

executable wordpuzzle
  import:          shared-properties
  hs-source-dirs:  app
  main-is:         Main.hs
  ghc-options:     -threaded -Wno-missing-home-modules
  autogen-modules: Paths_wordpuzzle
  other-modules:   Paths_wordpuzzle
  build-depends:
    , base                  ^>=4.18.3
    , bytestring
    , io-streams            ^>=1.5
    , optparse-applicative  ^>=0.18
    , validation            ^>=1.1
    , wordpuzzle

test-suite test
  import:         shared-properties
  hs-source-dirs: test
  main-is:        TestSpec.hs
  type:           exitcode-stdio-1.0
  ghc-options:    -threaded -Wno-missing-home-modules
  build-depends:
    , base        ^>=4.18.3
    , bytestring
    , hspec       ^>=2.11
    , io-streams
    , validation
    , wordpuzzle

benchmark benchmark
  import:         shared-properties
  hs-source-dirs: bench
  main-is:        Bench.hs
  type:           exitcode-stdio-1.0
  ghc-options:    -threaded -Wno-missing-home-modules
  build-depends:
    , base        ^>=4.18.3
    , bytestring
    , criterion   ^>=1.6
    , validation
    , wordpuzzle
